# eyePatchLang

./: .gitignore  langchain_architecture_plg.py  main.py  pyproject.toml  requirements.txt
backend/: app.py  ingest.py  retriever.py  server.py
backend/chains/: document_chain.py  subject_chain.py
backend/routers/: data_ingest.py  rag.py
frontend/: streamlit_app.py
