[project]
name = "eyepatchlang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.1",
    "fastapi>=0.123.9",
    "langchain>=1.1.2",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "langserve>=0.3.3",
    "openai>=2.9.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sse-starlette>=3.0.3",
    "streamlit>=1.52.1",
    "unstructured>=0.18.21",
    "uvicorn>=0.38.0",
]
